k8s/app-of-apps/base/infra/configuration/networking/gateways/cluster-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "0"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "6"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      # other options that could have been set here have been set in /terraform/clusters/hcloud/talos-k8s/hcloud_ccm.tf
      load-balancer.hetzner.cloud/name: "external-gateway"
      load-balancer.hetzner.cloud/location: "nbg1"
  listeners:
    - name: https
      hostname: "*.niovial.io"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: niovial-io-tls
