k8s/app-of-apps/base/infra/configuration/networking/gateways/tailscale-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tailscale
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: management-gateway-proxy
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: management-gateway
  namespace: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "8"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: tailscale
  listeners:
    - name: https
      hostname: "*.internal.niovial.io"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: internal-niovial-io-tls
